// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup when rendering for a CloudFront-enabled website should render country info for CloudFront Edge IP 1`] = `
<div
  className="ip-trace"
>
  <Component
    size="s"
  >
    <p
      className="typography typography_s"
    >
      You connected to IP 
      <strong>
        143.204.202.99
      </strong>
       
      <Component
        href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=143.204.202.99"
        size="xs"
        target="_blank"
        variant="light"
      >
        <a
          className="typography typography_light typography_xs link"
          href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=143.204.202.99"
          target="_blank"
        >
          lookup
        </a>
      </Component>
    </p>
  </Component>
  <CountryInfo
    match={
      Object {
        "continent": "NA",
        "extra": Object {
          "registeredCountry": "US",
        },
        "heuristic": "ip",
        "isoCountry": "US",
        "isoRegion": null,
        "score": 0.5,
      }
    }
  >
    <div
      className="traceroute__nested"
    >
      <CountryItem
        countryCode="US"
      >
        <Component
          className="country-item country-item_twemoji country-item_with-flag"
          data-flag="🇺🇸"
          size="xs"
          style={
            Object {
              "background": "url('/assets/twemoji/us.svg') no-repeat",
            }
          }
        >
          <p
            className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
            data-flag="🇺🇸"
            style={
              Object {
                "background": "url('/assets/twemoji/us.svg') no-repeat",
              }
            }
          >
            Country:
            <br />
            <strong>
              United States of America
            </strong>
          </p>
        </Component>
      </CountryItem>
      <CountryItem
        countryCode="US"
        shouldRenderFlag={false}
      >
        <Component
          className="country-item country-item_twemoji country-item_with-flag"
          size="xs"
        >
          <p
            className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
          >
            Legal registration:
            <br />
            <strong>
              United States of America
            </strong>
          </p>
        </Component>
      </CountryItem>
    </div>
  </CountryInfo>
  <ServerInfo
    request={
      Object {
        "headers": Array [
          Object {
            "name": "Server",
            "value": "Apache",
          },
          Object {
            "name": "X-Cache",
            "value": "Miss from cloudfront",
          },
          Object {
            "name": "Via",
            "value": "1.1 1764af62d635a1a6ee51aabc37405452.cloudfront.net (CloudFront)",
          },
          Object {
            "name": "X-Amz-Cf-Pop",
            "value": "FRA53-C1",
          },
          Object {
            "name": "X-Amz-Cf-Id",
            "value": "XXWLOSXVpyCPH_qWH_e61SK44oFpgwRyAst9DnHWCKlxjC8Dm6f7uw==",
          },
        ],
        "ip": "143.204.202.99",
        "url": "https://www.workday.com/",
      }
    }
  >
    <div
      className="traceroute__nested"
    >
      <Component
        size="xs"
      >
        <p
          className="typography typography_xs"
        >
          Server Software: 
          <Component
            variant="mono"
          >
            <span
              className="typography typography_mono"
            >
              Apache
            </span>
          </Component>
        </p>
      </Component>
    </div>
  </ServerInfo>
</div>
`;

exports[`Popup when rendering for a CloudFront-enabled website should show CloudFront POP abbreviation 1`] = `
<div
  className="cloudfront-trace"
>
  <Component
    size="s"
  >
    <p
      className="typography typography_s"
    >
      AWS CloudFront routed through
    </p>
  </Component>
  <div
    className="traceroute__nested"
  >
    <CountryItem
      countryCode="DE"
    >
      <Component
        className="country-item country-item_twemoji country-item_with-flag"
        data-flag="🇩🇪"
        size="xs"
        style={
          Object {
            "background": "url('/assets/twemoji/de.svg') no-repeat",
          }
        }
      >
        <p
          className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
          data-flag="🇩🇪"
          style={
            Object {
              "background": "url('/assets/twemoji/de.svg') no-repeat",
            }
          }
        >
          <strong>
            FRA
          </strong>
           data center in
          <br />
          <strong>
            Germany
          </strong>
        </p>
      </Component>
    </CountryItem>
    <Component
      size="xs"
      variant="light"
    >
      <p
        className="typography typography_light typography_xs"
      >
        Cache: 
        <Component
          variant="mono"
        >
          <span
            className="typography typography_mono"
          >
            Miss from cloudfront
          </span>
        </Component>
      </p>
    </Component>
  </div>
</div>
`;

exports[`Popup when rendering for a Cloudflare-protected website should render country info for Cloudflare IP 1`] = `
<div
  className="ip-trace"
>
  <Component
    size="s"
  >
    <p
      className="typography typography_s"
    >
      You connected to IP 
      <strong>
        104.27.165.61
      </strong>
       
      <Component
        href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=104.27.165.61"
        size="xs"
        target="_blank"
        variant="light"
      >
        <a
          className="typography typography_light typography_xs link"
          href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=104.27.165.61"
          target="_blank"
        >
          lookup
        </a>
      </Component>
    </p>
  </Component>
  <CountryInfo
    match={
      Object {
        "continent": "NA",
        "extra": null,
        "heuristic": "ip",
        "isoCountry": "US",
        "isoRegion": null,
        "score": 0.5,
      }
    }
  >
    <div
      className="traceroute__nested"
    >
      <CountryItem
        countryCode="US"
      >
        <Component
          className="country-item country-item_twemoji country-item_with-flag"
          data-flag="🇺🇸"
          size="xs"
          style={
            Object {
              "background": "url('/assets/twemoji/us.svg') no-repeat",
            }
          }
        >
          <p
            className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
            data-flag="🇺🇸"
            style={
              Object {
                "background": "url('/assets/twemoji/us.svg') no-repeat",
              }
            }
          >
            Country:
            <br />
            <strong>
              United States of America
            </strong>
          </p>
        </Component>
      </CountryItem>
    </div>
  </CountryInfo>
  <ServerInfo
    request={
      Object {
        "headers": Array [
          Object {
            "name": "cf-ray",
            "value": "5d5d5d5d5d5d5d5d-CPH",
          },
          Object {
            "name": "cf-cache-status",
            "value": "REVALIDATED",
          },
          Object {
            "name": "cf-request-id",
            "value": "00000004f10000000000000000000001",
          },
          Object {
            "name": "x-nf-request-id",
            "value": "b1b1b1b1-c9c9-4545-afaf-292929292929-33333333",
          },
          Object {
            "name": "server",
            "value": "cloudflare",
          },
        ],
        "ip": "104.27.165.61",
        "url": "https://ilin.dk/",
      }
    }
  >
    <div
      className="traceroute__nested"
    >
      <Component
        size="xs"
      >
        <p
          className="typography typography_xs"
        >
          Server Software: 
          <Component
            variant="mono"
          >
            <span
              className="typography typography_mono"
            >
              cloudflare
            </span>
          </Component>
        </p>
      </Component>
    </div>
  </ServerInfo>
</div>
`;

exports[`Popup when rendering for a Cloudflare-protected website should show Cloudflare data center abbreviation 1`] = `
<div
  className="cloudflare-trace"
>
  <Component
    size="s"
  >
    <p
      className="typography typography_s"
    >
      Cloudflare anycast rerouted through
    </p>
  </Component>
  <div
    className="traceroute__nested"
  >
    <CountryItem
      countryCode="DK"
    >
      <Component
        className="country-item country-item_twemoji country-item_with-flag"
        data-flag="🇩🇰"
        size="xs"
        style={
          Object {
            "background": "url('/assets/twemoji/dk.svg') no-repeat",
          }
        }
      >
        <p
          className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
          data-flag="🇩🇰"
          style={
            Object {
              "background": "url('/assets/twemoji/dk.svg') no-repeat",
            }
          }
        >
          <strong>
            CPH
          </strong>
           data center in
          <br />
          <strong>
            Denmark
          </strong>
        </p>
      </Component>
    </CountryItem>
    <Component
      size="xs"
      variant="light"
    >
      <p
        className="typography typography_light typography_xs"
      >
        Cache Status was 
        <Component
          variant="mono"
        >
          <span
            className="typography typography_mono"
          >
            REVALIDATED
          </span>
        </Component>
         (
        <Component
          href="https://support.cloudflare.com/hc/articles/200172516-Understanding-Cloudflare-s-CDN#h_bd959d6a-39c0-4786-9bcd-6e6504dcdb97"
          size="xs"
          target="_blank"
          title="What does \\"Cache status\\" mean?"
          variant="light"
        >
          <a
            className="typography typography_light typography_xs link"
            href="https://support.cloudflare.com/hc/articles/200172516-Understanding-Cloudflare-s-CDN#h_bd959d6a-39c0-4786-9bcd-6e6504dcdb97"
            target="_blank"
            title="What does \\"Cache status\\" mean?"
          >
            ?
          </a>
        </Component>
        )
      </p>
    </Component>
  </div>
</div>
`;

exports[`Popup when rendering for a Fastly-accelerated website should render country info for Fastly node IP 1`] = `
<div
  className="ip-trace"
>
  <Component
    size="s"
  >
    <p
      className="typography typography_s"
    >
      You connected to IP 
      <strong>
        151.101.1.195
      </strong>
       
      <Component
        href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=151.101.1.195"
        size="xs"
        target="_blank"
        variant="light"
      >
        <a
          className="typography typography_light typography_xs link"
          href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=151.101.1.195"
          target="_blank"
        >
          lookup
        </a>
      </Component>
    </p>
  </Component>
  <CountryInfo
    match={
      Object {
        "continent": "NA",
        "extra": Object {
          "registeredCountry": "US",
        },
        "heuristic": "ip",
        "isoCountry": "US",
        "isoRegion": null,
        "score": 0.5,
      }
    }
  >
    <div
      className="traceroute__nested"
    >
      <CountryItem
        countryCode="US"
      >
        <Component
          className="country-item country-item_twemoji country-item_with-flag"
          data-flag="🇺🇸"
          size="xs"
          style={
            Object {
              "background": "url('/assets/twemoji/us.svg') no-repeat",
            }
          }
        >
          <p
            className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
            data-flag="🇺🇸"
            style={
              Object {
                "background": "url('/assets/twemoji/us.svg') no-repeat",
              }
            }
          >
            Country:
            <br />
            <strong>
              United States of America
            </strong>
          </p>
        </Component>
      </CountryItem>
      <CountryItem
        countryCode="US"
        shouldRenderFlag={false}
      >
        <Component
          className="country-item country-item_twemoji country-item_with-flag"
          size="xs"
        >
          <p
            className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
          >
            Legal registration:
            <br />
            <strong>
              United States of America
            </strong>
          </p>
        </Component>
      </CountryItem>
    </div>
  </CountryInfo>
  <ServerInfo
    request={
      Object {
        "headers": Array [
          Object {
            "name": "x-served-by",
            "value": "cache-cph20643-CPH",
          },
          Object {
            "name": "x-cache",
            "value": "MISS",
          },
          Object {
            "name": "x-cache-hits",
            "value": "0",
          },
          Object {
            "name": "x-fastly-request-id",
            "value": "d252eca9b9d3a9449ecff9e552be6dd9f561a360",
          },
        ],
        "ip": "151.101.1.195",
        "url": "https://example.com/",
      }
    }
  />
</div>
`;

exports[`Popup when rendering for a Fastly-accelerated website should show Fastly POP abbreviation 1`] = `
<div
  className="fastly-trace"
>
  <Component
    size="s"
  >
    <p
      className="typography typography_s"
    >
      Fastly rerouted through
    </p>
  </Component>
  <div
    className="traceroute__nested"
  >
    <CountryItem
      countryCode="DK"
    >
      <Component
        className="country-item country-item_twemoji country-item_with-flag"
        data-flag="🇩🇰"
        size="xs"
        style={
          Object {
            "background": "url('/assets/twemoji/dk.svg') no-repeat",
          }
        }
      >
        <p
          className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
          data-flag="🇩🇰"
          style={
            Object {
              "background": "url('/assets/twemoji/dk.svg') no-repeat",
            }
          }
        >
          <strong>
            CPH
          </strong>
           data center in
          <br />
          <strong>
            Denmark
          </strong>
        </p>
      </Component>
    </CountryItem>
    <Component
      size="xs"
      variant="light"
    >
      <p
        className="typography typography_light typography_xs"
      >
        Cache Status was 
        <Component
          variant="mono"
        >
          <span
            className="typography typography_mono"
          >
            MISS
          </span>
        </Component>
         (
        <Component
          href="https://developer.fastly.com/learning/concepts/shielding/#debugging"
          size="xs"
          target="_blank"
          title="What does \\"Cache status\\" mean?"
          variant="light"
        >
          <a
            className="typography typography_light typography_xs link"
            href="https://developer.fastly.com/learning/concepts/shielding/#debugging"
            target="_blank"
            title="What does \\"Cache status\\" mean?"
          >
            ?
          </a>
        </Component>
        )
      </p>
    </Component>
  </div>
</div>
`;

exports[`Popup when rendering for a Netherlands-based website with legal entity in the US should render IP country info 1`] = `
<div
  className="ip-trace"
>
  <Component
    size="s"
  >
    <p
      className="typography typography_s"
    >
      You connected to IP 
      <strong>
        40.114.177.156
      </strong>
       
      <Component
        href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=40.114.177.156"
        size="xs"
        target="_blank"
        variant="light"
      >
        <a
          className="typography typography_light typography_xs link"
          href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=40.114.177.156"
          target="_blank"
        >
          lookup
        </a>
      </Component>
    </p>
  </Component>
  <CountryInfo
    match={
      Object {
        "continent": "EU",
        "extra": Object {
          "registeredCountry": "US",
        },
        "heuristic": "ip",
        "isoCountry": "NL",
        "isoRegion": null,
        "score": 0.5,
      }
    }
  >
    <div
      className="traceroute__nested"
    >
      <CountryItem
        countryCode="NL"
      >
        <Component
          className="country-item country-item_twemoji country-item_with-flag"
          data-flag="🇳🇱"
          size="xs"
          style={
            Object {
              "background": "url('/assets/twemoji/nl.svg') no-repeat",
            }
          }
        >
          <p
            className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
            data-flag="🇳🇱"
            style={
              Object {
                "background": "url('/assets/twemoji/nl.svg') no-repeat",
              }
            }
          >
            Country:
            <br />
            <strong>
              Netherlands
            </strong>
          </p>
        </Component>
      </CountryItem>
      <CountryItem
        countryCode="US"
        shouldRenderFlag={true}
      >
        <Component
          className="country-item country-item_twemoji country-item_with-flag"
          data-flag="🇺🇸"
          size="xs"
          style={
            Object {
              "background": "url('/assets/twemoji/us.svg') no-repeat",
            }
          }
        >
          <p
            className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
            data-flag="🇺🇸"
            style={
              Object {
                "background": "url('/assets/twemoji/us.svg') no-repeat",
              }
            }
          >
            Legal registration:
            <br />
            <strong>
              United States of America
            </strong>
          </p>
        </Component>
      </CountryItem>
    </div>
  </CountryInfo>
  <ServerInfo
    request={
      Object {
        "headers": Array [
          Object {
            "name": "status",
            "value": "304",
          },
          Object {
            "name": "server",
            "value": "nginx",
          },
        ],
        "ip": "40.114.177.156",
        "url": "https://duckduckgo.com/",
      }
    }
  >
    <div
      className="traceroute__nested"
    >
      <Component
        size="xs"
      >
        <p
          className="typography typography_xs"
        >
          Server Software: 
          <Component
            variant="mono"
          >
            <span
              className="typography typography_mono"
            >
              nginx
            </span>
          </Component>
        </p>
      </Component>
    </div>
  </ServerInfo>
</div>
`;

exports[`Popup when rendering for a Switzerland-based website should render IP country info 1`] = `
<div
  className="ip-trace"
>
  <Component
    size="s"
  >
    <p
      className="typography typography_s"
    >
      You connected to IP 
      <strong>
        185.70.41.35
      </strong>
       
      <Component
        href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=185.70.41.35"
        size="xs"
        target="_blank"
        variant="light"
      >
        <a
          className="typography typography_light typography_xs link"
          href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=185.70.41.35"
          target="_blank"
        >
          lookup
        </a>
      </Component>
    </p>
  </Component>
  <CountryInfo
    match={
      Object {
        "continent": "EU",
        "extra": Object {
          "registeredCountry": "CH",
        },
        "heuristic": "ip",
        "isoCountry": "CH",
        "isoRegion": null,
        "score": 0.5,
      }
    }
  >
    <div
      className="traceroute__nested"
    >
      <CountryItem
        countryCode="CH"
      >
        <Component
          className="country-item country-item_twemoji country-item_with-flag"
          data-flag="🇨🇭"
          size="xs"
          style={
            Object {
              "background": "url('/assets/twemoji/ch.svg') no-repeat",
            }
          }
        >
          <p
            className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
            data-flag="🇨🇭"
            style={
              Object {
                "background": "url('/assets/twemoji/ch.svg') no-repeat",
              }
            }
          >
            Country:
            <br />
            <strong>
              Switzerland
            </strong>
          </p>
        </Component>
      </CountryItem>
      <CountryItem
        countryCode="CH"
        shouldRenderFlag={false}
      >
        <Component
          className="country-item country-item_twemoji country-item_with-flag"
          size="xs"
        >
          <p
            className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
          >
            Legal registration:
            <br />
            <strong>
              Switzerland
            </strong>
          </p>
        </Component>
      </CountryItem>
    </div>
  </CountryInfo>
  <ServerInfo
    request={
      Object {
        "headers": undefined,
        "ip": "185.70.41.35",
        "url": "https://protonmail.com/",
      }
    }
  />
</div>
`;

exports[`Popup when rendering for a website behind Cloudflare with Powered By info exposed should render country info for Cloudflare IP 1`] = `
<div
  className="ip-trace"
>
  <Component
    size="s"
  >
    <p
      className="typography typography_s"
    >
      You connected to IP 
      <strong>
        104.26.7.76
      </strong>
       
      <Component
        href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=104.26.7.76"
        size="xs"
        target="_blank"
        variant="light"
      >
        <a
          className="typography typography_light typography_xs link"
          href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=104.26.7.76"
          target="_blank"
        >
          lookup
        </a>
      </Component>
    </p>
  </Component>
  <CountryInfo
    match={
      Object {
        "continent": "NA",
        "extra": null,
        "heuristic": "ip",
        "isoCountry": "US",
        "isoRegion": null,
        "score": 0.5,
      }
    }
  >
    <div
      className="traceroute__nested"
    >
      <CountryItem
        countryCode="US"
      >
        <Component
          className="country-item country-item_twemoji country-item_with-flag"
          data-flag="🇺🇸"
          size="xs"
          style={
            Object {
              "background": "url('/assets/twemoji/us.svg') no-repeat",
            }
          }
        >
          <p
            className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
            data-flag="🇺🇸"
            style={
              Object {
                "background": "url('/assets/twemoji/us.svg') no-repeat",
              }
            }
          >
            Country:
            <br />
            <strong>
              United States of America
            </strong>
          </p>
        </Component>
      </CountryItem>
    </div>
  </CountryInfo>
  <ServerInfo
    request={
      Object {
        "headers": Array [
          Object {
            "name": "x-powered-by",
            "value": "WP Engine",
          },
          Object {
            "name": "x-cacheable",
            "value": "SHORT",
          },
          Object {
            "name": "x-cache",
            "value": "HIT: 8",
          },
          Object {
            "name": "x-cache-group",
            "value": "normal",
          },
          Object {
            "name": "x-orig-cache-control",
            "value": "max-age=0",
          },
          Object {
            "name": "cf-cache-status",
            "value": "DYNAMIC",
          },
          Object {
            "name": "cf-request-id",
            "value": "050505050500000ebebebebeb0000001",
          },
          Object {
            "name": "server",
            "value": "cloudflare",
          },
          Object {
            "name": "cf-ray",
            "value": "5e5e5e5e5e5e5e5e7-FRA",
          },
        ],
        "ip": "104.26.7.76",
        "url": "https://peakon.com/",
      }
    }
  >
    <div
      className="traceroute__nested"
    >
      <Component
        size="xs"
      >
        <p
          className="typography typography_xs"
        >
          Server Software: 
          <Component
            variant="mono"
          >
            <span
              className="typography typography_mono"
            >
              cloudflare
            </span>
          </Component>
        </p>
      </Component>
      <Component
        size="xs"
      >
        <p
          className="typography typography_xs"
        >
          Powered By: 
          <Component
            variant="mono"
          >
            <span
              className="typography typography_mono"
            >
              WP Engine
            </span>
          </Component>
        </p>
      </Component>
    </div>
  </ServerInfo>
</div>
`;

exports[`Popup when rendering for a website behind Cloudflare with Powered By info exposed should render the header value to the user 1`] = `
<div
  className="ip-trace"
>
  <Component
    size="s"
  >
    <p
      className="typography typography_s"
    >
      You connected to IP 
      <strong>
        104.26.7.76
      </strong>
       
      <Component
        href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=104.26.7.76"
        size="xs"
        target="_blank"
        variant="light"
      >
        <a
          className="typography typography_light typography_xs link"
          href="https://apps.db.ripe.net/db-web-ui/query?source=GRS&bflag=true&searchtext=104.26.7.76"
          target="_blank"
        >
          lookup
        </a>
      </Component>
    </p>
  </Component>
  <CountryInfo
    match={
      Object {
        "continent": "NA",
        "extra": null,
        "heuristic": "ip",
        "isoCountry": "US",
        "isoRegion": null,
        "score": 0.5,
      }
    }
  >
    <div
      className="traceroute__nested"
    >
      <CountryItem
        countryCode="US"
      >
        <Component
          className="country-item country-item_twemoji country-item_with-flag"
          data-flag="🇺🇸"
          size="xs"
          style={
            Object {
              "background": "url('/assets/twemoji/us.svg') no-repeat",
            }
          }
        >
          <p
            className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
            data-flag="🇺🇸"
            style={
              Object {
                "background": "url('/assets/twemoji/us.svg') no-repeat",
              }
            }
          >
            Country:
            <br />
            <strong>
              United States of America
            </strong>
          </p>
        </Component>
      </CountryItem>
    </div>
  </CountryInfo>
  <ServerInfo
    request={
      Object {
        "headers": Array [
          Object {
            "name": "x-powered-by",
            "value": "WP Engine",
          },
          Object {
            "name": "x-cacheable",
            "value": "SHORT",
          },
          Object {
            "name": "x-cache",
            "value": "HIT: 8",
          },
          Object {
            "name": "x-cache-group",
            "value": "normal",
          },
          Object {
            "name": "x-orig-cache-control",
            "value": "max-age=0",
          },
          Object {
            "name": "cf-cache-status",
            "value": "DYNAMIC",
          },
          Object {
            "name": "cf-request-id",
            "value": "050505050500000ebebebebeb0000001",
          },
          Object {
            "name": "server",
            "value": "cloudflare",
          },
          Object {
            "name": "cf-ray",
            "value": "5e5e5e5e5e5e5e5e7-FRA",
          },
        ],
        "ip": "104.26.7.76",
        "url": "https://peakon.com/",
      }
    }
  >
    <div
      className="traceroute__nested"
    >
      <Component
        size="xs"
      >
        <p
          className="typography typography_xs"
        >
          Server Software: 
          <Component
            variant="mono"
          >
            <span
              className="typography typography_mono"
            >
              cloudflare
            </span>
          </Component>
        </p>
      </Component>
      <Component
        size="xs"
      >
        <p
          className="typography typography_xs"
        >
          Powered By: 
          <Component
            variant="mono"
          >
            <span
              className="typography typography_mono"
            >
              WP Engine
            </span>
          </Component>
        </p>
      </Component>
    </div>
  </ServerInfo>
</div>
`;

exports[`Popup when rendering for a website behind Cloudflare with Powered By info exposed should show Cloudflare data center abbreviation 1`] = `
<div
  className="cloudflare-trace"
>
  <Component
    size="s"
  >
    <p
      className="typography typography_s"
    >
      Cloudflare anycast rerouted through
    </p>
  </Component>
  <div
    className="traceroute__nested"
  >
    <CountryItem
      countryCode="DE"
    >
      <Component
        className="country-item country-item_twemoji country-item_with-flag"
        data-flag="🇩🇪"
        size="xs"
        style={
          Object {
            "background": "url('/assets/twemoji/de.svg') no-repeat",
          }
        }
      >
        <p
          className="typography typography_xs country-item country-item_twemoji country-item_with-flag"
          data-flag="🇩🇪"
          style={
            Object {
              "background": "url('/assets/twemoji/de.svg') no-repeat",
            }
          }
        >
          <strong>
            FRA
          </strong>
           data center in
          <br />
          <strong>
            Germany
          </strong>
        </p>
      </Component>
    </CountryItem>
    <Component
      size="xs"
      variant="light"
    >
      <p
        className="typography typography_light typography_xs"
      >
        Cache Status was 
        <Component
          variant="mono"
        >
          <span
            className="typography typography_mono"
          >
            DYNAMIC
          </span>
        </Component>
         (
        <Component
          href="https://support.cloudflare.com/hc/articles/200172516-Understanding-Cloudflare-s-CDN#h_bd959d6a-39c0-4786-9bcd-6e6504dcdb97"
          size="xs"
          target="_blank"
          title="What does \\"Cache status\\" mean?"
          variant="light"
        >
          <a
            className="typography typography_light typography_xs link"
            href="https://support.cloudflare.com/hc/articles/200172516-Understanding-Cloudflare-s-CDN#h_bd959d6a-39c0-4786-9bcd-6e6504dcdb97"
            target="_blank"
            title="What does \\"Cache status\\" mean?"
          >
            ?
          </a>
        </Component>
        )
      </p>
    </Component>
  </div>
</div>
`;
